--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Looping/Looping_Exercise/.vs/Looping_Exercise/DesignTimeBuild/.dtbcache
 *.props
 *.targets
 *.txt
+Exercises/Looping_Exercise/.vs/Looping_Exercise/DesignTimeBuild/.dtbcache
+Exercises/ListOfInts_Exercise/.vs/ListOfInts_Exercise/DesignTimeBuild/.dtbcache
